--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/jwellery
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:Jeswanth@2000}
-server.port=8088
+server.port=8087
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.security.oauth2.client.registration.google.client-id=642203191545-kcbc071s8sdtc6eg4g1r2eglt9nodr5e.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
